--- a/WebApplication7/Views/Home/Index.cshtml
+++ b/WebApplication7/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
 </p>
 
 <p>
-    Als Student besteht die Möglichkeit, unter dem Reiter <a href="@Url.Action("Public", "Theses")" class="elements"><span>Thesen</span></a> sich alle zur Zeit verfügbaren (freie oder reservierte) Themen anzusehen und den entsprechenden Betreuer zu kontaktieren.
+    Als Student besteht die Möglichkeit, unter dem Reiter <span>Thesen</span></a> sich alle zur Zeit verfügbaren (freie oder reservierte) Themen anzusehen und den entsprechenden Betreuer zu kontaktieren.
 </p>
 
 <p>
