--- a/WebApplication7/Views/Supervisors/Delete.cshtml
+++ b/WebApplication7/Views/Supervisors/Delete.cshtml
@@ -35,11 +35,12 @@
         <dd>
             @Html.DisplayFor(model => model.Active)
         </dd>
+
     </dl>
 
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Löschen" class="btn btn-default" /> |
-        <a asp-action="Index">Zurück zur Liste</a>
+        <input type="submit" value="Löschen" class="btn btn-default" /> 
+    <a asp-action="Index">Zurück zur Liste</a>
     </form>
 </div>
