--- a/WebApplication7/Views/Theses/Edit.cshtml
+++ b/WebApplication7/Views/Theses/Edit.cshtml
@@ -34,7 +34,6 @@
     <form enctype="multipart/form-data" asp-controller="Theses" method = "post" asp-action="Edit">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <input hidden asp-for="Id" />
-        <input hidden asp-for="PdfPath" />
         <div class="col-md-6">
             <div class="panel panel-default">
                 <div class="panel-heading">
@@ -51,7 +50,7 @@
                         </div>
                         <div class="form-group">
                             <label asp-for="Description" class="control-label"></label>
-                            <input asp-for="Description" class="form-control" />
+                            <textarea asp-for="Description" class="form-control" rows="5"></textarea>
                             <span asp-validation-for="Description" class="text-danger"></span>
                         </div>
                         <div class="form-group">
@@ -153,22 +152,22 @@
                     <div class="panel-body">
                         <div class="form-group">
                             <label asp-for="Summary" class="control-label"></label>
-                            <input asp-for="Summary" class="form-control" />
+                            <textarea asp-for="Summary" class="form-control" rows="5"></textarea>
                             <span asp-validation-for="Summary" class="text-danger"></span>
                         </div>
                         <div class="form-group">
                             <label asp-for="Strenghts" class="control-label"></label>
-                            <input asp-for="Strenghts" class="form-control" />
+                            <textarea asp-for="Strenghts" class="form-control" rows="5"></textarea>
                             <span asp-validation-for="Strenghts" class="text-danger"></span>
                         </div>
                         <div class="form-group">
                             <label asp-for="Weaknesses" class="control-label"></label>
-                            <input asp-for="Weaknesses" class="form-control" />
+                            <textarea asp-for="Weaknesses" class="form-control" rows="5"></textarea>
                             <span asp-validation-for="Weaknesses" class="text-danger"></span>
                         </div>
                         <div class="form-group">
                             <label asp-for="Evaluation" class="control-label"></label>
-                            <input asp-for="Evaluation" class="form-control" />
+                            <textarea asp-for="Evaluation" class="form-control" rows="5"></textarea>
                             <span asp-validation-for="Evaluation" class="text-danger"></span>
                         </div>
                         <div class="form-group">
